2004-05-23 Henrik Brix Andersen <brix@gimp.org>
* po-plugins/POTFILES.in: added plug-ins/MapObject/mapobject_apply.c
and plug-ins/maze/maze.h. Fixes part of bug #142996

* app/config/gimprc-blurbs.h
* plug-ins/gfig/gfig-spiral.c (spiral_button_press)
* plug-ins/gimpressionist/orientation.c (create_orientationpage)
* plug-ins/common/diffraction.c (diffraction_dialog)
* plug-ins/common/bumpmap.c (bumpmap_dialog)
* plug-ins/maze/maze.h
* plug-ins/MapObject/mapobject_apply.c (compute_image)
* app/tools/gimpmeasuretool.c (gimp_measure_tool_dialog_update)
* plug-ins/print/gimp_main_window.c (create_scaling_frame): marked
strings for translation, corrected small typos. Fixes part of bug
#142996


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13352 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/POTFILES.in
+++ b/po-plug-ins/POTFILES.in
@@ -7,6 +7,7 @@ plug-ins/Lighting/lighting_apply.c
 plug-ins/Lighting/lighting_main.c
 plug-ins/Lighting/lighting_ui.c
 plug-ins/MapObject/arcball.c
+plug-ins/MapObject/mapobject_apply.c
 plug-ins/MapObject/mapobject_main.c
 plug-ins/MapObject/mapobject_ui.c
 plug-ins/bmp/bmp.c
@@ -234,6 +235,7 @@ plug-ins/imagemap/imap_toolbar.c
 plug-ins/imagemap/imap_tools.c
 plug-ins/maze/algorithms.c
 plug-ins/maze/maze.c
+plug-ins/maze/maze.h
 plug-ins/maze/maze_face.c
 plug-ins/pagecurl/pagecurl.c
 plug-ins/print/gimp_color_window.c
