2004-05-24  Michael Natterer  <mitch@gimp.org>
	* app/Makefile.am
	* app/app-docs.sgml
	* app/app-sections.txt
	* app/app.types: updated to include the new actions/ and menus/
	directories. Lots of fixes and cleanups. Still stuff to do...


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13376 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/app/Makefile.am
+++ b/devel-docs/app/Makefile.am
@@ -41,7 +41,8 @@ IGNORE_HFILES = \
 	gimpimage-convert-fsdither.h	\
 	gimphelp-ids.h			\
 	gimprc-blurbs.h			\
-	paint-funcs-generic.h
+	paint-funcs-generic.h		\
+	gimpitemfactory.h
 
 # Images to copy into HTML directory
 HTML_IMAGES=
