2004-05-24  Michael Natterer  <mitch@gimp.org>
	* app/vectors/Makefile.am
	* app/vectors/gimpcoordmath.[ch]: removed...

	* app/core/Makefile.am
	* app/core/gimpcoords.[ch]: ...and added without the "bezier"
	namespace.

	* app/vectors/gimpbezierstroke.c: changed accordingly.

	* app/Makefile.am: force it to link gimpcoords.o


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13379 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/core/Makefile.am
+++ b/app/core/Makefile.am
@@ -61,6 +61,8 @@ libappcore_a_sources = \
 	gimpcontainer-filter.h		\
 	gimpcontext.c			\
 	gimpcontext.h			\
+	gimpcoords.c			\
+	gimpcoords.h			\
 	gimpdata.c			\
 	gimpdata.h			\
 	gimpdatafactory.c		\
