--- a/menus/toolbox-menu.xml.in
+++ b/menus/toolbox-menu.xml.in
@@ -6,7 +6,7 @@
 
     <menu action="file-menu" name="File">
       <placeholder name="New">
-        <menuitem action="file-new" />
+        <menuitem action="image-new" />
       </placeholder>
       <placeholder name="Open">
         <menuitem action="file-open" />
