2004-05-25  Michael Natterer  <mitch@gimp.org>
	* app/paint/Makefile.am
	* app/paint/gimpbrushcore-kernels.h
	* app/paint/gimpbrushcore.[ch]: new GimpPaintCore subclass
	containing all the brush painting specific stuff.

	* app/paint/gimppaintcore-kernels.h: removed this file.

	* app/paint/gimppaintcore.[ch]: removed all brush stuff.

	* app/paint/gimpairbrush.c
	* app/paint/gimpclone.[ch]
	* app/paint/gimpconvolve.[ch]
	* app/paint/gimpdodgeburn.[ch]
	* app/paint/gimperaser.[ch]
	* app/paint/gimppaintbrush.[ch]
	* app/paint/gimppencil.c
	* app/paint/gimpsmudge.[ch]: changed accordingly. Derive all
	classes which used to derive directly from GimpPaintCore from
	GimpBrushCore now. Lots of cleanup.

	* app/paint/paint-types.h
	* app/paint/gimp-paint.c
	* app/paint/gimppaintcore-stroke.c
	* app/tools/gimppainttool.c
	* tools/kernelgen.c: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13393 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/paint/Makefile.am
+++ b/app/paint/Makefile.am
@@ -24,6 +24,9 @@ libapppaint_a_sources = \
 	gimpairbrush.h		\
 	gimpairbrushoptions.c	\
 	gimpairbrushoptions.h	\
+	gimpbrushcore.c		\
+	gimpbrushcore.h		\
+	gimpbrushcore-kernels.h	\
 	gimpclone.c		\
 	gimpclone.h		\
 	gimpcloneoptions.c	\
@@ -42,7 +45,6 @@ libapppaint_a_sources = \
 	gimperaseroptions.h	\
 	gimppaintcore.c		\
 	gimppaintcore.h		\
-	gimppaintcore-kernels.h	\
 	gimppaintcore-stroke.c	\
 	gimppaintcore-stroke.h	\
 	gimppaintcore-undo.c	\
