2004-05-26  Michael Natterer  <mitch@gimp.org>
	* app/paint/Makefile.am
	* app/paint/gimpink-blob.[ch]
	* app/paint/gimpink.[ch]
	* app/paint/gimpinkoptions.[ch]: new files. Ported the ink tool
	to be a direct GimpPaintCore subclass without any GUI.

	* app/paint/gimp-paint.c: register GimpInk with the list of paint
	cores.

	* app/tools/Makefile.am
	* app/tools/gimpinkoptions.[ch]
	* app/tools/gimpinktool-blob.[ch]: removed these files.

	* app/tools/gimpinkoptions-gui.[ch]: new files containing only
	the GUI for GimpInkOptions.

	* app/tools/gimpinktool.[ch]: reduced to some few lines which
	implement a simple GimpPaintTool subclass.

	* app/tools/gimp-tools.c: associate the GimpInk paint_core with
	the GimpInkTool.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13404 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/paint/Makefile.am
+++ b/app/paint/Makefile.am
@@ -43,6 +43,12 @@ libapppaint_a_sources = \
 	gimperaser.h		\
 	gimperaseroptions.c	\
 	gimperaseroptions.h	\
+	gimpink.c		\
+	gimpink.h		\
+	gimpink-blob.c		\
+	gimpink-blob.h		\
+	gimpinkoptions.c	\
+	gimpinkoptions.h	\
 	gimppaintcore.c		\
 	gimppaintcore.h		\
 	gimppaintcore-stroke.c	\
