2004-05-27  Michael Natterer  <mitch@gimp.org>
	* app/widgets/widgets-enums.[ch]: added enum GimpActiveColor which
	can be one of { FOREGROUND, BACKGROUND },

	* app/widgets/Makefile.am
	* app/widgets/gimpfgbgeditor.[ch]: new widget implementing the
	FG/BG/Swap/Default color area known from the toolbox.

	* app/widgets/gimptoolbox-color-area.c: use the new widget.

	* app/widgets/gimpcoloreditor.[ch]: replaced the FG/BG buttons and
	the color area by a GimpFgBgEditor.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13418 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/widgets/Makefile.am
+++ b/app/widgets/Makefile.am
@@ -111,6 +111,8 @@ libappwidgets_a_sources = \
 	gimpenumwidgets.h		\
 	gimperrorconsole.c		\
 	gimperrorconsole.h		\
+	gimpfgbgeditor.c		\
+	gimpfgbgeditor.h		\
 	gimpfiledialog.c		\
 	gimpfiledialog.h		\
 	gimpfontview.c			\
