2004-05-31  Sven Neumann  <sven@gimp.org>
	* app/Makefile.am
	* app/actions/file-actions.c
	* app/actions/file-commands.[ch]
	* app/gui/Makefile.am
	* app/gui/file-open-location-dialog.[ch]
	* app/widgets/gimphelp-ids.h
	* menus/image-menu.xml.in
	* menus/toolbox-menu.xml.in: added a rudimentary "Open Location"
	dialog.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13456 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/gui/Makefile.am
+++ b/app/gui/Makefile.am
@@ -21,6 +21,8 @@ dialogs_sources = \
 	file-new-dialog.h		\
 	file-open-dialog.c		\
 	file-open-dialog.h		\
+	file-open-location-dialog.c	\
+	file-open-location-dialog.h	\
 	file-save-dialog.c		\
 	file-save-dialog.h		\
 	font-select.c			\
