2004-05-31  Sven Neumann  <sven@gimp.org>
	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpcontainerentry.[ch]: added new widget
	GimpContainerEntry, a GtkEntry with completion that implements the
	GimpContainerView interface.

	* app/tools/gimptextoptions.c (gimp_text_options_gui): added a
	GimpContainerEntry to select the font.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13457 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/widgets/Makefile.am
+++ b/app/widgets/Makefile.am
@@ -57,6 +57,8 @@ libappwidgets_a_sources = \
 	gimpcontainercombobox.h		\
 	gimpcontainereditor.c		\
 	gimpcontainereditor.h		\
+	gimpcontainerentry.c		\
+	gimpcontainerentry.h		\
 	gimpcontainergridview.c		\
 	gimpcontainergridview.h		\
 	gimpcontainerpopup.c		\
