2004-06-02  Sven Neumann  <sven@gimp.org>
	* app/actions/Makefile.am (EXTRA_DIST)
	* app/menus/Makefile.am (EXTRA_DIST): removed makefile.msc until
	they have been added.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13488 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/actions/Makefile.am
+++ b/app/actions/Makefile.am
@@ -137,7 +137,7 @@ libappactions_a_SOURCES = \
 	view-commands.h
 
 
-EXTRA_DIST = makefile.msc
+EXTRA_DIST =
 
 AM_CPPFLAGS = \
 	-DG_LOG_DOMAIN=\"Gimp-Actions\"	\
