--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -303,6 +303,8 @@ app/widgets/gimptemplateeditor.c
 app/widgets/gimptexteditor.c
 app/widgets/gimpthumbbox.c
 app/widgets/gimptoolbox-color-area.c
+app/widgets/gimptoolbox-dnd.c
+app/widgets/gimptoolbox-image-area.c
 app/widgets/gimptoolbox-indicator-area.c
 app/widgets/gimptoolbox.c
 app/widgets/gimptooloptionseditor.c
