2004-06-03  Michael Natterer  <mitch@gimp.org>
	* app/actions/vectors-actions.c: added alternative actions
	"vectors-selection-from-vectors" and
	"vectors-selection-to-vectors-short" with different labels suited
	for the "Select" menu.

	* app/actions/select-actions.c: removed "select-from-vectors"
	and "select-to-vectors" (to vectors was crashing anyway).

	* app/actions/select-commands.[ch]: removed
	select_from_vectors_cmd_callback(). Fixes code dupliction.

	* menus/image-menu.xml.in
	* menus/selection-editor-menu.xml: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13503 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/menus/image-menu.xml.in
+++ b/menus/image-menu.xml.in
@@ -76,7 +76,7 @@
       <menuitem action="select-all" />
       <menuitem action="select-none" />
       <menuitem action="select-invert" />
-      <menuitem action="select-from-vectors" />
+      <menuitem action="vectors-selection-from-vectors" />
       <menuitem action="select-float" />
       <menuitem action="tools-by-color-select-short" />
       <separator />
@@ -90,7 +90,7 @@
       <separator />
       <menuitem action="qmask-toggle" />
       <menuitem action="select-save" />
-      <menuitem action="select-to-vectors" />
+      <menuitem action="vectors-selection-to-vectors-short" />
       <separator />
     </menu>
 
