2004-06-05  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/Makefile.am
	* plug-ins/common/plugin-defs.pl
	* plug-ins/common/glob.c: added a simple glob plug-in based on
	some old code by George Hartz. This plug-in is very useful when
	you need to do batch processing, especially from Script-Fu.
	Fixes bug #143661.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13529 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/common/Makefile.am
+++ b/plug-ins/common/Makefile.am
@@ -79,6 +79,7 @@ libexec_PROGRAMS = \
 	gifload \
 	gih \
 	glasstile \
+	glob \
 	gqbist \
 	gradmap \
 	grid \
@@ -844,6 +845,17 @@ glasstile_LDADD = \
 	$(libgimpcolor)							\
 	$(libgimpbase)							\
 	$(GTK_LIBS)							\
+	$(RT_LIBS)							\
+	$(INTLLIBS)
+
+glob_SOURCES = \
+	glob.c
+
+glob_LDADD = \
+	$(libgimp)							\
+	$(libgimpcolor)							\
+	$(libgimpbase)							\
+	$(GLIB_LIBS)							\
 	$(RT_LIBS)							\
 	$(INTLLIBS)
 
