2004-06-05  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/plugin-defs.pl
	* plug-ins/common/Makefile.am
	* plug-ins/common/gauss_iir.c
	* plug-ins/common/gauss_rle.c: removed the two gaussian blur
	plug-ins...

	* plug-ins/common/gauss.c: and added a merged version done by
	William Skaggs. Fixes bug #134088.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13534 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/common/Makefile.am
+++ b/plug-ins/common/Makefile.am
@@ -70,8 +70,7 @@ libexec_PROGRAMS = \
 	film \
 	flarefx \
 	fractaltrace \
-	gauss_iir \
-	gauss_rle \
+	gauss \
 	gbr \
 	gee \
 	gee_zoom \
@@ -732,23 +731,10 @@ fractaltrace_LDADD = \
 	$(RT_LIBS)							\
 	$(INTLLIBS)
 
-gauss_iir_SOURCES = \
-	gauss_iir.c
+gauss_SOURCES = \
+	gauss.c
 
-gauss_iir_LDADD = \
-	$(libgimpui)							\
-	$(libgimpwidgets)						\
-	$(libgimp)							\
-	$(libgimpcolor)							\
-	$(libgimpbase)							\
-	$(GTK_LIBS)							\
-	$(RT_LIBS)							\
-	$(INTLLIBS)
-
-gauss_rle_SOURCES = \
-	gauss_rle.c
-
-gauss_rle_LDADD = \
+gauss_LDADD = \
 	$(libgimpui)							\
 	$(libgimpwidgets)						\
 	$(libgimp)							\
