--- a/menus/image-menu.xml.in
+++ b/menus/image-menu.xml.in
@@ -33,6 +33,78 @@
       <menuitem action="file-quit" />
     </menu>
 
+    <menu action="context-menu" name="Context">
+      <menu action="context-colors-menu" name="Colors">
+        <menuitem action="context-colors-default" />
+        <menuitem action="context-colors-swap" />
+      </menu> 
+      <menu action="context-opacity-menu" name="Opacity">
+        <menuitem action="context-opacity-transparent" />
+        <menuitem action="context-opacity-opaque" />
+        <menuitem action="context-opacity-decrease" />
+        <menuitem action="context-opacity-increase" />
+      </menu>
+      <separator />
+      <menu action="context-brush-menu" name="Brush">
+        <menuitem action="context-brush-first" />
+        <menuitem action="context-brush-last" />
+        <menuitem action="context-brush-previous" />
+        <menuitem action="context-brush-next" />
+	<separator />
+        <menuitem action="context-brush-radius-minimum" />
+        <menuitem action="context-brush-radius-maximum" />
+        <menuitem action="context-brush-radius-decrease" />
+        <menuitem action="context-brush-radius-increase" />
+        <menuitem action="context-brush-radius-decrease-skip" />
+        <menuitem action="context-brush-radius-increase-skip" />
+	<separator />
+        <menuitem action="context-brush-hardness-minimum" />
+        <menuitem action="context-brush-hardness-maximum" />
+        <menuitem action="context-brush-hardness-decrease" />
+        <menuitem action="context-brush-hardness-increase" />
+        <menuitem action="context-brush-hardness-decrease-skip" />
+        <menuitem action="context-brush-hardness-increase-skip" />
+	<separator />
+        <menuitem action="context-brush-aspect-minimum" />
+        <menuitem action="context-brush-aspect-maximum" />
+        <menuitem action="context-brush-aspect-decrease" />
+        <menuitem action="context-brush-aspect-increase" />
+        <menuitem action="context-brush-aspect-decrease-skip" />
+        <menuitem action="context-brush-aspect-increase-skip" />
+	<separator />
+        <menuitem action="context-brush-angle-minimum" />
+        <menuitem action="context-brush-angle-maximum" />
+        <menuitem action="context-brush-angle-decrease" />
+        <menuitem action="context-brush-angle-increase" />
+        <menuitem action="context-brush-angle-decrease-skip" />
+        <menuitem action="context-brush-angle-increase-skip" />
+      </menu>
+      <menu action="context-pattern-menu" name="Pattern">
+        <menuitem action="context-pattern-first" />
+        <menuitem action="context-pattern-last" />
+        <menuitem action="context-pattern-previous" />
+        <menuitem action="context-pattern-next" />
+      </menu>
+      <menu action="context-palette-menu" name="Palette">
+        <menuitem action="context-palette-first" />
+        <menuitem action="context-palette-last" />
+        <menuitem action="context-palette-previous" />
+        <menuitem action="context-palette-next" />
+      </menu>
+      <menu action="context-gradient-menu" name="Gradient">
+        <menuitem action="context-gradient-first" />
+        <menuitem action="context-gradient-last" />
+        <menuitem action="context-gradient-previous" />
+        <menuitem action="context-gradient-next" />
+      </menu>
+      <menu action="context-font-menu" name="Font">
+        <menuitem action="context-font-first" />
+        <menuitem action="context-font-last" />
+        <menuitem action="context-font-previous" />
+        <menuitem action="context-font-next" />
+      </menu>
+    </menu>
+
     <menu action="edit-menu" name="Edit">
       <placeholder name="Undo">
         <menuitem action="edit-undo" />
@@ -289,8 +361,8 @@
 
     <menu action="tools-menu" name="Tools">
       <menuitem action="dialogs-toolbox" />
-      <menuitem action="tools-default-colors" />
-      <menuitem action="tools-swap-colors" />
+      <menuitem action="context-colors-default" />
+      <menuitem action="context-colors-swap" />
       <separator />
       <menu action="tools-select-menu" name="Selection Tools">
 	<menuitem action="tools-rect-select" />
