2004-06-16  Michael Natterer  <mitch@gimp.org>
	* libgimpwidgets/gimpcontroller.[ch]: added a "name" property.
	Dispatch events only if the controller is enabled.

	* app/widgets/gimpcontrollerwheel.c: added controller events for
	all possible modifier combinations.

	* etc/Makefile.am
	* etc/controllerrc: default controllerrc which maps all unused
	wheel+modifier combinations to more-or-less usefull stuff.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13640 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/etc/Makefile.am
+++ b/etc/Makefile.am
@@ -6,7 +6,8 @@ gimpsysconf_DATA = \
 	templaterc	\
 	unitrc		\
 	ps-menurc	\
-	sessionrc
+	sessionrc	\
+	controllerrc
 
 EXTRA_DIST = \
 	$(gimpsysconf_DATA)
