2004-06-16  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimpcontrollers.c: bug fix.

	* configure.in: check for linux/input.h.

	* modules/Makefile.am
	* modules/controller_linux_input.c: added a prototype controller
	module using the linux input event interface.

	* etc/controllerrc: added example config for linux input device.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13646 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/configure.in
+++ b/configure.in
@@ -1208,6 +1208,16 @@ AC_SUBST(LCMS_LIBS)
 AM_CONDITIONAL(HAVE_LCMS, test $have_lcms = yes)
 
 
+#######################
+# Check for linux input
+#######################
+
+have_linux_input=no
+AC_CHECK_HEADER(linux/input.h, have_linux_input=yes)
+
+AM_CONDITIONAL(HAVE_LINUX_INPUT, test $have_linux_input = yes)
+
+
 ############################################################
 # GIF compression: Allow builder to specify at compile time
 # which compression style she wants to use for GIFs.
