--- a/menus/image-menu.xml.in
+++ b/menus/image-menu.xml.in
@@ -368,6 +368,7 @@
 	<menuitem action="tools-rect-select" />
 	<menuitem action="tools-ellipse-select" />
 	<menuitem action="tools-free-select" />
+	<menuitem action="tools-fuzzy-select" />
 	<menuitem action="tools-by-color-select" />
 	<menuitem action="tools-iscissors" />
       </menu>
@@ -388,6 +389,7 @@
 	<menuitem action="tools-move" />
 	<menuitem action="tools-crop" />
 	<menuitem action="tools-rotate" />
+	<menuitem action="tools-scale" />
 	<menuitem action="tools-shear" />
 	<menuitem action="tools-perspective" />
 	<menuitem action="tools-flip" />
