2004-06-16  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/plugin-defs.pl: changed dependencies for blur.

	* plug-ins/common/Makefile.am: regenerated.

	* plug-ins/common/blur.c: no need to include libgimpui.h any longer.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13659 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/common/Makefile.am
+++ b/plug-ins/common/Makefile.am
@@ -334,12 +334,10 @@ blur_SOURCES = \
 	blur.c
 
 blur_LDADD = \
-	$(libgimpui)							\
-	$(libgimpwidgets)						\
 	$(libgimp)							\
 	$(libgimpcolor)							\
 	$(libgimpbase)							\
-	$(GTK_LIBS)							\
+	$(GLIB_LIBS)							\
 	$(RT_LIBS)							\
 	$(INTLLIBS)
 
