2004-06-17  Michael Natterer  <mitch@gimp.org>
	* libgimpwidgets/gimpcontroller.[ch]: removed "enabled"
	property. Removed GIMP_CONTROLLER_PARAM_RERIALIZE from the "name"
	property because it's the hardware-determined name of this
	controller instance.

	* app/widgets/gimpcontrollerwheel.c
	* modules/controller_linux_input.c: set the name.

	* libgimpwidgets/gimpwidgets.h: #include gimpcontroller.h.

	* app/widgets/gimpcontrollerinfo.[ch]: added "enabled" here
	instead.  Don't dispatch events if the controller is
	disabled. Made everything work (not crash) with info->mapping
	being NULL.

	* etc/controllerrc: updated again with the changed format.

	* app/widgets/gimpcontrollers.[ch]: added
	gimp_controllers_get_list() which returns the container of
	controllers.

	* app/widgets/gimphelp-ids.h
	* app/gui/preferences-dialog.c: added controller configuration
	(can't change anything yet, just view the current settings).
	Resurrected the "Input Devices" page and removed the "Session"
	page by moving its widgets to other pages. Pack the various
	"Save now"/"Clear now" buttons vertically, not horizontally.
	Fixes bug #139069.

	* themes/Default/images/preferences/Makefile.am
	* themes/Default/images/preferences/controllers.png
	* themes/Default/images/preferences/theme.png: new icons for new
	prefs pages. Someone needs to make them nice...


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13674 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/themes/Default/images/preferences/Makefile.am
+++ b/themes/Default/images/preferences/Makefile.am
@@ -3,6 +3,7 @@
 themedatadir = $(gimpdatadir)/themes/Default/images/preferences
 
 PREFS_IMAGES = \
+	controllers.png			\
 	default-comment.png		\
 	default-grid.png		\
 	display.png			\
@@ -27,6 +28,7 @@ PREFS_IMAGES = \
 	monitor.png			\
 	new-image.png			\
 	session.png			\
+	theme.png			\
 	toolbox.png			\
 	tool-options.png		\
 	window-management.png
