2004-06-19  Michael Natterer  <mitch@gimp.org>
	* modules/Makefile.am
	* modules/controller_midi.c: new controller for MIDI input. Maps
	all note on and note off events and all MIDI controllers to
	GimpContollerEvents. Should parse any MIDI stream. Code based on
	blinkenmedia stuff from Daniel Mack.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13699 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/modules/Makefile.am
+++ b/modules/Makefile.am
@@ -34,6 +34,7 @@ lib_LTLIBRARIES = \
 	libcdisplay_gamma.la		\
 	libcdisplay_highcontrast.la	\
 	$(cdisplay_proof_module)	\
+	libcontroller_midi.la		\
 	$(controller_linux_input_module)
 
 
@@ -68,3 +69,7 @@ libcdisplay_proof_la_LIBADD = $(libgimpbase) $(libgimpwidgets) $(GTK_LIBS) $(LCM
 libcontroller_linux_input_la_SOURCES = controller_linux_input.c
 libcontroller_linux_input_la_LDFLAGS = -avoid-version -module $(no_undefined)
 libcontroller_linux_input_la_LIBADD = $(libgimpwidgets) $(GTK_LIBS)
+
+libcontroller_midi_la_SOURCES = controller_midi.c
+libcontroller_midi_la_LDFLAGS = -avoid-version -module $(no_undefined)
+libcontroller_midi_la_LIBADD = $(libgimpwidgets) $(GTK_LIBS)
