2004-06-20  Philip Lafleur  <plafleur@cvs.gnome.org>
	* app/display/gimpdisplayshell-scale.[ch]:
	* app/display/gimpnavigationview.[ch]:
	* app/actions/view-actions.c:
	* app/actions/view-commands.[ch]:
	* app/widgets/gimphelp-ids.h:
	* menus/image-menu.xml.in: Changed "Zoom to Fit Window" command
	to "Fit Image in Window" and added another command, "Fit Image
	to Window", that zooms according to the opposite dimension. Fixes
	bug #144597.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13706 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/menus/image-menu.xml.in
+++ b/menus/image-menu.xml.in
@@ -173,7 +173,8 @@
       <menu action="view-zoom-menu" name="Zoom">
         <menuitem action="view-zoom-out" />
         <menuitem action="view-zoom-in" />
-        <menuitem action="view-zoom-fit" />
+        <menuitem action="view-zoom-fit-in" />
+        <menuitem action="view-zoom-fit-to" />
 	<separator />
         <menuitem action="view-zoom-16-1" />
         <menuitem action="view-zoom-8-1" />
